--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,3 +26,13 @@ jobs:
           ldflags: -s -w
           buildmode: default
           trimpath: true
+      -
+        name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/v')
+          with:
+            draft: true
+            files: |
+              /build/*
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
